# OSuRV_2025

./: DOCS.tsv  DOCS.tsv.ods  README.txt
Car/: work.txt
Car/FW/Arduino_Motor_Controller/: Arduino_Motor_Controller.ino  CRC16.hpp  SoftwareSerial2.cpp  avr_type_traits.h  fw_pkgs.hpp  sabertooth.c  sabertooth.h  type_shorts.h  work2.txt
Car/FW/KompletnoBLDCiServo/: senzor.ino
Car/ROS2/ackibot_ws/: .gitignore
Car/ROS2/ackibot_ws/scripts/: ackibot_basic_flow.sh  ackibot_flow.sh  ackibot_run_sbc.sh  mars_joy.sh  mars_joy_remove.py  mars_joy_remove_pair.py  mars_joy_sbc_from_pc.sh  mybot_build.sh  mybot_flow.sh  mybot_install.sh
Car/ROS2/ackibot_ws/src/ackibot_bringup/: CMakeLists.txt  package.xml
Car/ROS2/ackibot_ws/src/ackibot_bringup/config/: ekf.yaml  twist_mux_topics.yaml
Car/ROS2/ackibot_ws/src/ackibot_bringup/launch/: imu.launch.py  robot.launch.py  rviz2.launch.py  state_publisher.launch.py
Car/ROS2/ackibot_ws/src/ackibot_bringup/param/: ackibot.yaml
Car/ROS2/ackibot_ws/src/ackibot_description/: CMakeLists.txt  package.xml
Car/ROS2/ackibot_ws/src/ackibot_description/urdf/: ackibot.urdf
Car/ROS2/ackibot_ws/src/ackibot_node/: CMakeLists.txt  package.xml
Car/ROS2/ackibot_ws/src/ackibot_node/include/: CRC16.hpp  fw_pkgs.hpp  type_shorts.h
Car/ROS2/ackibot_ws/src/ackibot_node/src/: diff_drive_controller.cpp  diff_drive_controller.hpp  fw_node.cpp  fw_node.hpp  main.cpp  odometry.cpp  odometry.hpp  sabertooth.c
Car/ROS2/ackibot_ws/src/ackibot_teleop/: CMakeLists.txt  package.xml
Car/ROS2/ackibot_ws/src/ackibot_teleop/config/: ps3.config.yaml  sony.config.yaml
Car/ROS2/ackibot_ws/src/ackibot_teleop/launch/: teleop.launch.py
Car/ROS2/ackibot_ws/src/ackibot_teleop/src/: joy_node.cpp
Car/ROS2/ackibot_ws/src/ackibot_utils/: CMakeLists.txt  package.xml
Car/ROS2/ackibot_ws/src/ackibot_utils/ackibot_utils/: uname.py  usb_mapper.py  utils.py
Car/ROS2/ackibot_ws/src/joy/config/: joy-params.yaml
Car/ROS2/ackibot_ws/src/joy/src/: game_controller.cpp  joy.cpp  joy_enumerate_devices.cpp
Car/ROS2/ackibot_ws/src/twist_mux/config/: joystick.yaml  twist_mux_locks.yaml  twist_mux_topics.yaml
Car/ROS2/ackibot_ws/src/twist_mux/include/twist_mux/: params_helpers.hpp  topic_handle.hpp  twist_mux.hpp  twist_mux_diagnostics.hpp
Car/ROS2/ackibot_ws/src/twist_mux/src/: twist_marker.cpp  twist_mux.cpp  twist_mux_diagnostics.cpp  twist_mux_node.cpp
Car/SW/: paket_test.py
Dron_Loznica/: work.txt
Dron_Magenta/: work.txt
Eurobot/: README.md
Eurobot/mep3_behavior/include/mep3_behavior/: aruco_detection.hpp  blackboard.hpp  navigate_to_action.hpp  pose_2d.hpp
Eurobot/mep3_behavior/src/: mep3_behavior_tree.cpp
Eurobot/mep3_behavior/strategies/: project.btproj  test_2025.xml  test_2026.xml  timeout.xml
Eurobot/mep3_msgs/: CMakeLists.txt
Eurobot/mep3_msgs/action/: Aruco.action
Eurobot/mep3_vision/: CMakeLists.txt  package.xml
Eurobot/mep3_vision/src/: aruco_detection.cpp
Flags/: README.md
Flags/SW/Motor_Ctrl/: .gitignore  install_RPi.sh  predictionUdp.py  test_i2c.sh
Flags/SW/Motor_Ctrl/model/: augment.py  calculate_mfcc.py  labels.npy  mfcc_utils.py  offline_predict.py  train.py
Flags/SW/Motor_Ctrl/pi/: motors.py  rpi_udp.py  test_motors.py
Garbage_Sort/SW/App/4_Flipper_3_Way/: .gitignore  flipper.c  wscript
Garbage_Sort/SW/App/joypad/: common.h  joy_node.c  waf  wiper_node.c  wscript
Goal_Game/ROS2/Goal_Game/: CMakeLists.txt  package.xml
Goal_Game/ROS2/Goal_Game/src/: README.txt  keyboard_node.cpp  servo_node.cpp
Oximeter/publisher/: pub.py
Oximeter/subscriber/: signal_processing.py  subBPM.py  subRaw.py  subSPO2.py
Oximeter/subscriber/templates/: index.html
RC_Tank/: readme.md
RC_Tank/Tank/uart_bridge/: SerialCPP.cpp  UART.hpp  flow.sh  stop_uart_chassis.cpp  test_uart_chassis.cpp  uart_bridge.cpp  wscript
RC_Tank/Tank/vezba06_kernel_space/: wscript
RC_Tank/Tank/vezba06_kernel_space/HW/Proto_Servo_Current_Limiter_Shield/: Proto_Servo_Current_Limiter_Shield.kicad_pcb  Proto_Servo_Current_Limiter_Shield.kicad_prl  Proto_Servo_Current_Limiter_Shield.kicad_pro  Proto_Servo_Current_Limiter_Shield.kicad_sch  substracter.kicad_sch  sym-lib-table
RC_Tank/Tank/vezba06_kernel_space/HW/Servo_Motor_Shield_v1/: .gitignore  Power.kicad_sch  Power_Protection.kicad_sch  Servo_Motor_Shield_v1.kicad_pcb  Servo_Motor_Shield_v1.kicad_prl  Servo_Motor_Shield_v1.kicad_pro  Servo_Motor_Shield_v1.kicad_sch  channel.kicad_sch  channel.kicad_sch-bak  fp-lib-table  leds.kicad_sch  substracter.kicad_sch  sym-lib-table
RC_Tank/Tank/vezba06_kernel_space/HW/Servo_Motor_Shield_v1/Local.pretty/: Arduino_UNO_R3_WithMountingHoles_Snapped_to_P2.54mm_Custom_Cutted_Pins.kicad_mod
RC_Tank/Tank/vezba06_kernel_space/ROS2/chassis_ws/: run_pi.sh
RC_Tank/Tank/vezba06_kernel_space/ROS2/chassis_ws/src/wc_bridge/: CMakeLists.txt  package.xml
RC_Tank/Tank/vezba06_kernel_space/ROS2/chassis_ws/src/wc_bridge/src/: twist_to_ackermann.cpp
RC_Tank/Tank/vezba06_kernel_space/ROS2/chassis_ws/src/wc_main/: CMakeLists.txt  package.xml
RC_Tank/Tank/vezba06_kernel_space/ROS2/chassis_ws/src/wc_main/src/: simple_ackermann_steering_controller.cpp  simple_ackermann_steering_controller.hpp
RC_Tank/Tank/vezba06_kernel_space/SW/Driver/motor_ctrl/: bldc.c  main.c
RC_Tank/Tank/vezba06_kernel_space/SW/Test/test_app/: test_servos.c
Radar/CAD/: Sensor Flange Adapter.stl
Radar/Docs/: README.md
Radar/SW/App/: .lock-waf_linux2_build  .lock-waf_linux_build  nano.save  plot_node.py  sensor_node.py  stepper_node.c  wscript
Radar/SW/Driver/gpio_ctrl/: Makefile  gpio.c  gpio.h  main.c
Radar/SW/Driver/gpio_ctrl/include/: gpio_ctrl.h
