<?xml version="1.0"?>
<package format="3">
  <name>wc_main</name>
  <version>0.1.0</version>
  <description>Wheeled chassis controller</description>

  <maintainer email="milos.subotic.sm@gmail.com">Milos Subotic</maintainer>
  <license>Proprietary</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>ackermann_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

